src/snapshots/kk__tests__number_literal.snap
---
source: src/main.rs
expression: "transpile_source(\"let x = -123.456\".to_string())"
---
Ok(
    "const x = -123.456",
)
