src/snapshots/kk__tests__record_1.snap
---
source: src/main.rs
expression: "transpile_source(\"let x = {a: {b: c}, d: e}\".to_string())"
---
Ok(
    "const x = {a: {b: c},d: e}",
)
