src/snapshots/kk__tests__tag_literal_1.snap
---
source: src/main.rs
expression: "transpile_source(\"let x = #ok(#some(2))\".to_string())"
---
Ok(
    "const x = {$:\'ok\',_:{$:\'some\',_:2}}",
)
