src/snapshots/kk__tests__type_alias_1.snap
---
source: src/main.rs
expression: "transpile_source(\"type Shape = #circle({radius: string}) | #none | #square(number)\".to_string())"
---
Ok(
    "",
)
